--- a/index.html
+++ b/index.html
@@ -13,6 +13,51 @@
     <meta name="keywords" content="tripleten, homeland" />
     <meta name="author" content="Magaly Romero" />
   </head>
-
-  <body></body>
+  <body>
+    <div class="page">
+      <header class="lead">
+        <div class="lead__logo">
+          <img
+            src="./images/logo.svg"
+            alt="Logo tripleten'"
+            class="lead__logo"
+          />
+        </div>
+        <h1 class="lead__title">De patria a patria</h1>
+        <p class="lead__subtitle">
+          Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
+        </p>
+        <img
+          src="./images/lead__image.jpg"
+          alt="Fotografía de paisaje costal'"
+          class="lead__image"
+        />
+      </header>
+      <main class="intro">
+        <h2 class="intro__text intro__text-title">
+          Conoce un poco mejor los lugares de los que proceden tus colegas en
+          línea
+        </h2>
+        <p class="intro__text intro__text-quote">
+          Todo ser humano es un artista, un ser de la libertad, llamado a
+          participar en la transformación y reforma de las condiciones, el
+          pensamiento y las estructuras que conforman e influyen en nuestras
+          vidas.
+        </p>
+        <p class="intro__text intro__text-author">— Joseph Beuys</p>
+        <p class="intro__text intro__text-footer">
+          La ciudad de TripleTen ha reunido a profesionales de diferentes
+          rincones del mundo. Hoy, la Galería de Arte TripleTen se enorgullece
+          de presentar historias y fotografías de algunas de las personas que
+          dedican su tiempo y esfuerzo a hacer que los futuros profesionales de
+          la tecnología de esta ciudad se sientan como en casa. Cada uno de
+          nosotros tiene una historia única sobre el lugar del que procede. No
+          dudes en añadir a nuestra colección tu propia historia y una obra de
+          arte visual dedicada a tu ciudad natal. No importa de dónde seas, nos
+          alegra que seas nuestro vecino.
+        </p>
+      </main>
+      <footer class="footer__copyright">© 2024. Magaly Romero</footer>
+    </div>
+  </body>
 </html>
