--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             class="lead__logo"
           />
         </div>
-        <h1 class="lead__title">De patria a patria</h1>
+        <h1 class="lead__title">De patria <br />a patria</h1>
         <p class="lead__subtitle">
           Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
         </p>
