--- a/index.html
+++ b/index.html
@@ -245,7 +245,9 @@
 
                 <div class="place">
                     <figure class="place__item">
-                        <h3 class="place__title">Muramvya, Burundi</h3>
+                        <h3 class="place__item place__title">
+                            Muramvya, Burundi
+                        </h3>
                     </figure>
                     <figure class="place__item">
                         <div class="place__website">
