--- a/index.html
+++ b/index.html
@@ -72,56 +72,56 @@
                     <figure class="gallery__item">
                         <img
                             src="./images/grid/grid__item-01.jpg"
-                            alt=""
+                            alt="imagen de paisaje"
                             class="gallery__image"
                         />
                     </figure>
                     <figure class="gallery__item">
                         <img
                             src="./images/grid/grid__item-02.jpg"
-                            alt=""
+                            alt="imagen de paisaje"
                             class="gallery__image"
                         />
                     </figure>
                     <figure class="gallery__item">
                         <img
                             src="./images/grid/grid__item-03.jpg"
-                            alt=""
+                            alt="imagen de paisaje"
                             class="gallery__image"
                         />
                     </figure>
                     <figure class="gallery__item">
                         <img
                             src="./images/grid/grid__item-04.jpg"
-                            alt=""
+                            alt="imagen de paisaje"
                             class="gallery__image"
                         />
                     </figure>
                     <figure class="gallery__item">
                         <img
                             src="./images/grid/grid__item-05.jpg"
-                            alt=""
+                            alt="imagen de paisaje"
                             class="gallery__image"
                         />
                     </figure>
                     <figure class="gallery__item">
                         <img
                             src="./images/grid/grid__item-06.jpg"
-                            alt=""
+                            alt="imagen de paisaje"
                             class="gallery__image"
                         />
                     </figure>
                     <figure class="gallery__item">
                         <img
                             src="./images/grid/grid__item-07.jpg"
-                            alt=""
+                            alt="imagen de paisaje"
                             class="gallery__image"
                         />
                     </figure>
                     <figure class="gallery__item">
                         <img
                             src="./images/grid/grid__item-08.jpg"
-                            alt=""
+                            alt="imagen de paisaje"
                             class="gallery__image"
                         />
                     </figure>
@@ -148,7 +148,7 @@
                     <figure class="place__item">
                         <img
                             src="./images/places/place__image-1.jpg"
-                            alt=""
+                            alt="imagen de Cricieth, Gales"
                             class="place__image"
                         />
                     </figure>
@@ -203,7 +203,7 @@
                     <figure class="place__item">
                         <img
                             src="./images/places/place__image-2.jpg"
-                            alt=""
+                            alt="imagen de Berea, EE. UU."
                             class="place__image"
                         />
                     </figure>
@@ -261,7 +261,7 @@
                     <figure class="place__item">
                         <img
                             src="./images/places/place__image-3.jpg"
-                            alt=""
+                            alt="imagen de Muramvya, Burundi"
                             class="place__image"
                         />
                     </figure>
@@ -326,7 +326,7 @@
                     <figure class="place__item">
                         <img
                             src="./images/places/place__image-4.jpg"
-                            alt=""
+                            alt="imagen de Morelia, Mexico"
                             class="place__image"
                         />
                     </figure>
