--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                     </figure>
 
                     <figure class="place__item">
-                        <button class="place__button">
+                        <div class="place__button">
                             <a
                                 href="https://google.com"
                                 class="place__button-link"
                                 >Compra esta obra como NFT</a
                             >
-                        </button>
+                        </div>
                     </figure>
                 </div>
 
@@ -233,13 +233,13 @@
                     </figure>
 
                     <figure class="place__item">
-                        <button class="place__button">
+                        <div class="place__button">
                             <a
                                 href="https://google.com"
                                 class="place__button-link"
                                 >Compra esta obra como NFT</a
                             >
-                        </button>
+                        </div>
                     </figure>
                 </div>
 
@@ -300,13 +300,13 @@
                     </figure>
 
                     <figure class="place__item">
-                        <button class="place__button">
+                        <div class="place__button">
                             <a
                                 href="https://google.com"
                                 class="place__button-link"
                                 >Compra esta obra como NFT</a
                             >
-                        </button>
+                        </div>
                     </figure>
                 </div>
 
@@ -364,13 +364,13 @@
                     </figure>
 
                     <figure class="place__item">
-                        <button class="place__button">
+                        <div class="place__button">
                             <a
                                 href="https://google.com"
                                 class="place__button-link"
                                 >Compra esta obra como NFT</a
                             >
-                        </button>
+                        </div>
                     </figure>
                 </div>
             </section>
