--- a/index.html
+++ b/index.html
@@ -67,93 +67,93 @@
                     </p>
                 </section>
             </main>
-            <section class="photo">
-                <div class="container">
-                    <figure class="gallery__item">
+            <section class="photo-grid">
+                <div class="photo-grid__container">
+                    <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-01.jpg"
                             alt="imagen de paisaje"
-                            class="gallery__image"
+                            class="photo-grid__image"
                         />
                     </figure>
-                    <figure class="gallery__item">
+                    <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-02.jpg"
                             alt="imagen de paisaje"
-                            class="gallery__image"
+                            class="photo-grid__image"
                         />
                     </figure>
-                    <figure class="gallery__item">
+                    <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-03.jpg"
                             alt="imagen de paisaje"
-                            class="gallery__image"
+                            class="photo-grid__image"
                         />
                     </figure>
-                    <figure class="gallery__item">
+                    <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-04.jpg"
                             alt="imagen de paisaje"
-                            class="gallery__image"
+                            class="photo-grid__image"
                         />
                     </figure>
-                    <figure class="gallery__item">
+                    <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-05.jpg"
                             alt="imagen de paisaje"
-                            class="gallery__image"
+                            class="photo-grid__image"
                         />
                     </figure>
-                    <figure class="gallery__item">
+                    <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-06.jpg"
                             alt="imagen de paisaje"
-                            class="gallery__image"
+                            class="photo-grid__image"
                         />
                     </figure>
-                    <figure class="gallery__item">
+                    <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-07.jpg"
                             alt="imagen de paisaje"
-                            class="gallery__image"
+                            class="photo-grid__image"
                         />
                     </figure>
-                    <figure class="gallery__item">
+                    <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-08.jpg"
                             alt="imagen de paisaje"
-                            class="gallery__image"
+                            class="photo-grid__image"
                         />
                     </figure>
                 </div>
             </section>
             <section class="places">
-                <div class="place">
-                    <figure class="place__item">
-                        <h3 class="place__title">Cricieth, Gales</h3>
+                <div class="places__container">
+                    <figure class="places__item">
+                        <h3 class="places__title">Cricieth, Gales</h3>
                     </figure>
 
-                    <figure class="place__item">
-                        <div class="place__website">
-                            <h4 class="place__url-heading">Artistas</h4>
-                            <p class="place__artist">
+                    <figure class="places__item">
+                        <div class="places__website">
+                            <h4 class="places__url-heading">Artistas</h4>
+                            <p class="places__artist">
                                 Steffan Warren, editor jefe
                             </p>
-                            <p class="place__artist">
+                            <p class="places__artist">
                                 Kseniya Glagoleva, gerente de proyectos
                             </p>
                         </div>
                     </figure>
 
-                    <figure class="place__item">
+                    <figure class="places__item">
                         <img
                             src="./images/places/place__image-1.jpg"
                             alt="imagen de Cricieth, Gales"
-                            class="place__image"
+                            class="places__image"
                         />
                     </figure>
-                    <figure class="place__item">
-                        <p class="place__paragraph">
+                    <figure class="places__item">
+                        <p class="places__paragraph">
                             Las ruinas medievales del castillo de Cricieth
                             dominan la ciudad desde una roca que extiende sobre
                             el mar. Se cree que fue construido por Llewelyn el
@@ -162,7 +162,7 @@
                             Snowdonia*, se ha convertido en un popular destino
                             turístico durante los meses de verano.
                         </p>
-                        <p class="place__paragraph">
+                        <p class="places__paragraph">
                             A pocos pasos de camino al castillo, puedes
                             disfrutar de los mejores helados del mundo en
                             Cadwalader's, cuyo ingrediente secreto se rumorea
@@ -176,40 +176,40 @@
                         </p>
                     </figure>
 
-                    <figure class="place__item">
-                        <div class="place__button">
+                    <figure class="places__item">
+                        <div class="places__button">
                             <a
                                 href="https://google.com"
-                                class="place__button-link"
+                                class="places__button-link"
                                 >Compra esta obra como NFT</a
                             >
                         </div>
                     </figure>
                 </div>
 
-                <div class="place">
-                    <figure class="place__item">
-                        <h3 class="place__title">Berea, EE. UU.</h3>
+                <div class="places__container">
+                    <figure class="places__item">
+                        <h3 class="places__title">Berea, EE. UU.</h3>
                     </figure>
-                    <figure class="place__item">
-                        <div class="place__website">
-                            <h4 class="place__url-heading">Artista</h4>
-                            <p class="place__artist">
+                    <figure class="places__item">
+                        <div class="places__website">
+                            <h4 class="places__url-heading">Artista</h4>
+                            <p class="places__artist">
                                 Travis Turner, autor y editor
                             </p>
                         </div>
                     </figure>
 
-                    <figure class="place__item">
+                    <figure class="places__item">
                         <img
                             src="./images/places/place__image-2.jpg"
                             alt="imagen de Berea, EE. UU."
-                            class="place__image"
+                            class="places__image"
                         />
                     </figure>
 
-                    <figure class="place__item">
-                        <p class="place__paragraph">
+                    <figure class="places__item">
+                        <p class="places__paragraph">
                             Berea es una pequeña ciudad ubicada en la parte
                             central de Kentucky. La ciudad está rodeada por
                             hermosos bosques y campos. Es conocida como la
@@ -221,7 +221,7 @@
                             al "spoonbread", un platillo local hecho de pan de
                             maíz y que se sirve con una cuchara de madera.
                         </p>
-                        <p class="place__paragraph">
+                        <p class="places__paragraph">
                             Aunque, probablemente es mejor conocida por su
                             universidad. El Berea College fue fundado en 1855 y
                             fue la primera universidad sureña integrada
@@ -232,42 +232,42 @@
                         </p>
                     </figure>
 
-                    <figure class="place__item">
-                        <div class="place__button">
+                    <figure class="places__item">
+                        <div class="places__button">
                             <a
                                 href="https://google.com"
-                                class="place__button-link"
+                                class="places__button-link"
                                 >Compra esta obra como NFT</a
                             >
                         </div>
                     </figure>
                 </div>
 
-                <div class="place">
-                    <figure class="place__item">
-                        <h3 class="place__item place__title">
+                <div class="places__container">
+                    <figure class="places__item">
+                        <h3 class="places__item places__title">
                             Muramvya, Burundi
                         </h3>
                     </figure>
-                    <figure class="place__item">
-                        <div class="place__website">
-                            <h4 class="place__url-heading">Artista</h4>
-                            <p class="place__artist">
+                    <figure class="places__item">
+                        <div class="places__website">
+                            <h4 class="places__url-heading">Artista</h4>
+                            <p class="places__artist">
                                 Grevisse Kenguruka, editor técnico
                             </p>
                         </div>
                     </figure>
 
-                    <figure class="place__item">
+                    <figure class="places__item">
                         <img
                             src="./images/places/place__image-3.jpg"
                             alt="imagen de Muramvya, Burundi"
-                            class="place__image"
+                            class="places__image"
                         />
                     </figure>
 
-                    <figure class="place__item">
-                        <p class="place__paragraph">
+                    <figure class="places__item">
+                        <p class="places__paragraph">
                             Muramvya es una de las 18 provincias de Burundi.
                             Durante la época del reino, Muramvya fue su capital;
                             y en 2017, gracias a su paisaje cultural y natural,
@@ -276,7 +276,7 @@
                             centro de Burundi, entre las capitales política y
                             económica del país.
                         </p>
-                        <p class="place__paragraph">
+                        <p class="places__paragraph">
                             Su clima es más bien frío durante la noche, pero
                             durante el día, podrías pensar que estás en el
                             paraíso. A sus 2,665 metros (8,743 ft) sobre el
@@ -286,7 +286,7 @@
                             plantaciones de té y café del país, y que representa
                             la mayoría de las exportaciones de Burundi.
                         </p>
-                        <p class="place__paragraph">
+                        <p class="places__paragraph">
                             El Parque nacional de Kibira, una de las mayores
                             reservas de vida silvestre para los simios, ocupa
                             parte de cuatro provincias, incluyendo Muramvya.
@@ -299,40 +299,40 @@
                         </p>
                     </figure>
 
-                    <figure class="place__item">
-                        <div class="place__button">
+                    <figure class="places__item">
+                        <div class="places__button">
                             <a
                                 href="https://google.com"
-                                class="place__button-link"
+                                class="places__button-link"
                                 >Compra esta obra como NFT</a
                             >
                         </div>
                     </figure>
                 </div>
 
-                <div class="place">
-                    <figure class="place__item">
-                        <h3 class="place__title">Morelia, Mexico</h3>
+                <div class="places__container">
+                    <figure class="places__item">
+                        <h3 class="places__title">Morelia, Mexico</h3>
                     </figure>
-                    <figure class="place__item">
-                        <div class="place__website">
-                            <h4 class="place__url-heading">Artistas</h4>
-                            <p class="place__artist">
+                    <figure class="places__item">
+                        <div class="places__website">
+                            <h4 class="places__url-heading">Artistas</h4>
+                            <p class="places__artist">
                                 Magaly Romero, web developer
                             </p>
                         </div>
                     </figure>
 
-                    <figure class="place__item">
+                    <figure class="places__item">
                         <img
                             src="./images/places/place__image-4.jpg"
                             alt="imagen de Morelia, Mexico"
-                            class="place__image"
+                            class="places__image"
                         />
                     </figure>
 
-                    <figure class="place__item">
-                        <p class="place__paragraph">
+                    <figure class="places__item">
+                        <p class="places__paragraph">
                             Morelia, la capital del estado de Michoacán en
                             México, es una ciudad rica en historia, cultura y
                             arquitectura colonial. Fundada en 1541, Morelia es
@@ -342,7 +342,7 @@
                             cantera rosa crean un ambiente encantador y evocador
                             del pasado.
                         </p>
-                        <p class="place__paragraph">
+                        <p class="places__paragraph">
                             Entre los principales atractivos de Morelia se
                             encuentran la majestuosa Catedral de Morelia, con su
                             estilo barroco y torres imponentes, y el Acueducto
@@ -352,7 +352,7 @@
                             cine y arte que atraen a visitantes de todo el
                             mundo.
                         </p>
-                        <p class="place__paragraph">
+                        <p class="places__paragraph">
                             Además de su patrimonio arquitectónico y cultural,
                             Morelia ofrece una deliciosa gastronomía local,
                             destacando platos como las carnitas, los uchepos y
@@ -363,11 +363,11 @@
                         </p>
                     </figure>
 
-                    <figure class="place__item">
-                        <div class="place__button">
+                    <figure class="places__item">
+                        <div class="places__button">
                             <a
                                 href="https://google.com"
-                                class="place__button-link"
+                                class="places__button-link"
                                 >Compra esta obra como NFT</a
                             >
                         </div>
