--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
                         class="header__logo"
                     />
                 </div>
-                <h1 class="header__title">
-                    De patria<br />
-                    a patria
-                </h1>
+                <h1 class="header__title">De patria a patria</h1>
                 <p class="header__subtitle">
                     Un viaje épico de Kentucky a Burundi pasando por Gales y
                     Ucrania
