Correccion de alt

--- a/index.html
+++ b/index.html
@@ -69,56 +69,56 @@
                     <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-01.jpg"
-                            alt="imagen de paisaje"
+                            alt="imagen de paisaje de costa "
                             class="photo-grid__image"
                         />
                     </figure>
                     <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-02.jpg"
-                            alt="imagen de paisaje"
+                            alt="imagen de casas al ladodelmar, Irlanda"
                             class="photo-grid__image"
                         />
                     </figure>
                     <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-03.jpg"
-                            alt="imagen de paisaje"
+                            alt="imagen de paisaje con iglesia al fondo"
                             class="photo-grid__image"
                         />
                     </figure>
                     <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-04.jpg"
-                            alt="imagen de paisaje"
+                            alt="Imagen de el rio Dnieper, Ucranía y un puente cruzandolo"
                             class="photo-grid__image"
                         />
                     </figure>
                     <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-05.jpg"
-                            alt="imagen de paisaje"
+                            alt="imagen de paisaje con pasto verde y edificios al fondo"
                             class="photo-grid__image"
                         />
                     </figure>
                     <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-06.jpg"
-                            alt="imagen de paisaje"
+                            alt="imagen de jardin con señalamientos de estacionamiento"
                             class="photo-grid__image"
                         />
                     </figure>
                     <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-07.jpg"
-                            alt="imagen de paisaje"
+                            alt="imagen de  edificios tradicionales en Burundi, Africa "
                             class="photo-grid__image"
                         />
                     </figure>
                     <figure class="photo-grid__item">
                         <img
                             src="./images/grid/grid__item-08.jpg"
-                            alt="imagen de paisaje"
+                            alt="imagen de casas en la falda de un monte"
                             class="photo-grid__image"
                         />
                     </figure>
